Fixed overflow issue as well as button positioning issue with mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -132,11 +132,15 @@ body{
 }
 
 @media (max-width: 767px){
+    .board_container{
+        position: relative;
+        width: 90vw;
+    }
 
     .board{
         background-color: rgba(0, 0, 0, 0.397);
-        width: 50vh;
-        height: 50vh;
+        width: 80vw;
+        height: 80vw;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
@@ -151,9 +155,9 @@ body{
 
     #reset_button{
         position: absolute;
-        top: 350px;
+        top: 100%;
         left: 0px;
-        width: 50vh;
+        width: 80vw;
         background: white;
         padding: .6rem;
         font-size: 1rem;
